revert overflow fix

--- a/styles/general.css
+++ b/styles/general.css
@@ -24,12 +24,11 @@ body {
 
 #disclaimer {
 	display: none;
-	height: calc(100vh - 50px);
+	height: 100vh;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	overflow: hidden;
 }
 
 #disclaimer h2 {
